--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AnimatedLLM - Interactive Transformer Visualization</title>
+  <title>AnimatedLLM - Explaining LLMs with Interactive Animations</title>
   <meta name="description"
-    content="Interactive educational animations visualizing how large language models (LLMs) and Transformers work." />
+    content="Interactive demo visualizing how large language models (LLMs) and Transformers work." />
   <meta name="keywords"
     content="LLM, Transformer, Visualization, AI, Education, Neural Networks, Deep Learning, Interactive, Demo, NLP, Artificial Intelligence" />
   <meta name="author" content="Zdenek Kasner" />
@@ -18,7 +18,7 @@
   <meta property="og:url" content="https://animatedllm.com/" />
   <meta property="og:title" content="AnimatedLLM - Interactive Transformer Visualization" />
   <meta property="og:description"
-    content="Interactive educational animations visualizing how large language models (LLMs) and Transformers work." />
+    content="Interactive demo visualizing how large language models (LLMs) and Transformers work." />
   <meta property="og:image" content="https://animatedllm.com/social-preview.png" />
 
   <!-- Twitter -->
@@ -26,7 +26,7 @@
   <meta property="twitter:url" content="https://animatedllm.com/" />
   <meta property="twitter:title" content="AnimatedLLM - Interactive Transformer Visualization" />
   <meta property="twitter:description"
-    content="Interactive educational animations visualizing how large language models (LLMs) and Transformers work." />
+    content="Interactive demo visualizing how large language models (LLMs) and Transformers work." />
   <meta property="twitter:image" content="https://animatedllm.com/social-preview.png" />
 
   <!-- Start Single Page Apps for GitHub Pages -->
