--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AnimatedLLM - Explaining LLMs with Interactive Animations</title>
+  <title>AnimatedLLM - Explaining LLMs with Interactive Visualizations</title>
   <meta name="description"
-    content="Interactive demo visualizing how large language models (LLMs) and Transformers work." />
+    content="Understand how large language models work under the hood with a series of animations." />
   <meta name="keywords"
     content="LLM, Transformer, Visualization, AI, Education, Neural Networks, Deep Learning, Interactive, Demo, NLP, Artificial Intelligence" />
   <meta name="author" content="Zdenek Kasner" />
@@ -16,17 +16,17 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://animatedllm.com/" />
-  <meta property="og:title" content="AnimatedLLM - Interactive Transformer Visualization" />
+  <meta property="og:title" content="AnimatedLLM - Explaining LLMs with Interactive Visualizations" />
   <meta property="og:description"
-    content="Interactive demo visualizing how large language models (LLMs) and Transformers work." />
+    content="Understand how large language models work under the hood with a series of animations." />
   <meta property="og:image" content="https://animatedllm.com/social-preview.png" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://animatedllm.com/" />
-  <meta property="twitter:title" content="AnimatedLLM - Interactive Transformer Visualization" />
+  <meta property="twitter:title" content="AnimatedLLM - Explaining LLMs with Interactive Visualizations" />
   <meta property="twitter:description"
-    content="Interactive demo visualizing how large language models (LLMs) and Transformers work." />
+    content="Understand how large language models work under the hood with a series of animations." />
   <meta property="twitter:image" content="https://animatedllm.com/social-preview.png" />
 
   <!-- Start Single Page Apps for GitHub Pages -->
