--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
   <meta name="keywords"
     content="LLM, Transformer, Visualization, AI, Education, Neural Networks, Deep Learning, Interactive, Demo, NLP, Artificial Intelligence" />
   <meta name="author" content="Zdenek Kasner" />
-  <link rel="canonical" href="https://animatedllm.com/" />
+  <link rel="canonical" href="https://animatedllm.github.io/" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://animatedllm.com/" />
+  <meta property="og:url" content="https://animatedllm.github.io/" />
   <meta property="og:title" content="AnimatedLLM - Explaining LLMs with Interactive Visualizations" />
   <meta property="og:description"
     content="Understand how large language models work under the hood with a series of animations." />
-  <meta property="og:image" content="https://animatedllm.com/social-preview.png" />
+  <meta property="og:image" content="https://animatedllm.github.io/social-preview.png" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://animatedllm.com/" />
+  <meta property="twitter:url" content="https://animatedllm.github.io/" />
   <meta property="twitter:title" content="AnimatedLLM - Explaining LLMs with Interactive Visualizations" />
   <meta property="twitter:description"
     content="Understand how large language models work under the hood with a series of animations." />
-  <meta property="twitter:image" content="https://animatedllm.com/social-preview.png" />
+  <meta property="twitter:image" content="https://animatedllm.github.io/social-preview.png" />
 
   <!-- Start Single Page Apps for GitHub Pages -->
   <script type="text/javascript">
